--- a/.github/workflows/blockchain.yml
+++ b/.github/workflows/blockchain.yml
@@ -1,30 +1,58 @@
-name: BlockChain
+name: BlockChain Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
-  app-tests:
-    name: Test
+  continuous-integration:
+    name: Laravel (PHP ${{ matrix.php-versions }})
     runs-on: ubuntu-latest
 
+    env:
+      REDIS_PORT: 6379
+      REDIS_CLIENT: predis
+      BLOCKCHAIN_REDIS_KEY: blockchain
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379/tcp
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    strategy:
+      fail-fast: false
+      matrix:
+        php-versions: ['8.2']
+
     steps:
-      - uses: shivammathur/setup-php@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
-      - uses: actions/checkout@v3
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      - name: Init BlockChain
-        env:
-          BLOCKCHAIN_FILE_PATH: /storage/app/blockchain-test.txt
-        run: php artisan generate:blockchain_with_block
-      - name: Execute tests (Unit and Feature tests) via PHPUnit
-        env:
-          BLOCKCHAIN_FILE_PATH: /storage/app/blockchain-test.txt
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, dom, fileinfo, mysql, libxml, xml, xmlwriter, dom, tokenizer, filter, json, phar, pcre, openssl, pdo, intl, curl
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+
+      - name: Prepare the application
+        run: |
+          php -r "copy('.env.example', '.env');"
+
+      - name: Test with phpunit
         run: vendor/bin/phpunit
