--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,7 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
+REDIS_CLIENT=predis
+
 BLOCKCHAIN_FILE_PATH=/storage/app/blockchain.txt
+BLOCKCHAIN_REDIS_KEY=blockchain
