--- a/.github/workflows/blockchain.yml
+++ b/.github/workflows/blockchain.yml
@@ -13,20 +13,21 @@ jobs:
 
     env:
       REDIS_PORT: 6379
+      REDIS_HOST: localhost
       REDIS_CLIENT: predis
       BLOCKCHAIN_REDIS_KEY: blockchain
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379/tcp
-        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
     strategy:
       fail-fast: false
       matrix:
         php-versions: ['8.2']
 
     steps:
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.5.0
+        with:
+          redis-version: ${{ matrix.redis-version }}
+          redis-port: 6379
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -53,6 +54,9 @@ jobs:
       - name: Prepare the application
         run: |
           php -r "copy('.env.example', '.env');"
+
+      - name: Init BlockChain
+        run: php artisan generate:blockchain_with_block
 
       - name: Test with phpunit
         run: vendor/bin/phpunit
