--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ REDIS_CLIENT=predis
 
 BLOCKCHAIN_FILE_PATH=/storage/app/blockchain.txt
 BLOCKCHAIN_REDIS_KEY=blockchain
+
+# Docker
+USER_ID=1000
+GROUP_ID=1000
+PLATFORM=linux/arm64
+DB_PLATFORM=arm64v8
